# frontier

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  env.toml.example  load_test.py  mcp.json.example  package.json  playwright.config.js  pyproject.toml  pytest.ini  run.ps1  run.sh  test.py
configs/: agent_choice.txt  memory_analyze.txt  playwright-mcp.json  reply_check.txt  system_prompt.txt  system_prompt_image.txt
data/: tarot_cards.json
data/iching/: README.md  USAGE.md  index.json  trigrams.json
models/: README.md  __init__.py  catalog.py  types.py
models/data/: catalog.json  catalog.schema.json  provider.schema.json
plugins/agent/: __init__.py
plugins/clockwork/: __init__.py  agent_task_handler.py  proactive_engine.py  reminder_handler.py  task_commands.py  task_handlers.py  task_manager.py  task_migration.py  task_models.py
plugins/dashboard/: __init__.py  auth.py  db.py
plugins/fireside/: __init__.py  memory_commands.py  min_heap.py
plugins/frontier/: __init__.py  cognitive.py  context_check.py  database.py  local_slm.py  markdown_render.py  message.py  painter.py  plugin.py  slm.py  utils.py
plugins/playground/: __init__.py
plugins/toolbox/: __init__.py
plugins/watchtower/: __init__.py  environment_check.py
plugins/wolfx/: __init__.py  cenc_client.py  cenc_handler.py
plugins/wonderland/: __init__.py  painter.py
policy/: __init__.py  base.py  decisions.py  engine.py  errors.py  manifesto.py  manifesto.yaml  snapshots.py
policy/policies/: __init__.py  access_control.py  content_safety.py
prompts/: AGENTS.md  active_reply_check.md  agent_choice.md  agent_choice.txt  daily_news.md  daily_news.txt  ens_rules.md  image_summary.md  memory_analyze_v2.md  rendering.md  reply_check.md  rubric_chat_quality.md  rubric_compliance.md  rubric_technical.md  system_prompt.md  system_prompt.txt  system_prompt_image.md
renderer/: THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.config.js
renderer/src/: main.js  vendor.css
resources/: markdown_render.css  markdown_render.html
scripts/: backfill_message_vectors.py  daily_news_preview.py  database_maintenance.py
simple_mcp/: server.py
skills/ens-weather/: SKILL.md
skills/qq-operation-safety/: SKILL.md
skills/rich-markdown/: SKILL.md
templates/: daily_news.css  daily_news.html  earthquake.html  eew.html  markdown_render.css  markdown_render.html  nrc_eggs_details.css  nrc_eggs_details.html  nrc_eggs_groups.css  nrc_eggs_groups.html  nrc_merchant.css  nrc_merchant.html  typhoon.css  typhoon.html  vep_menu.css  vep_menu.html
templates/markdown_assets/: markdown-render.css
test/: __init__.py  conftest.py  earth_now_test.py  min_heap_test.py  plugins_clockwork_test.py  plugins_dashboard_auth_test.py  run_script_test.py  run_scripts_test.py  utils_configs_test.py  utils_render_test.py
test/e2e/: e2e_dashboard.spec.js
test/integration/: earth_now_test.py
test/models/: catalog_test.py
test/plugins/: agent_image_memory_test.py  clockwork_test.py  dashboard_auth_test.py  dashboard_routes_test.py  fireside_flow_test.py  fireside_image_memory_test.py  fireside_memory_commands_test.py  playground_test.py  toolbox_init_test.py  toolbox_test.py  watchtower_init_test.py  watchtower_test.py  wolfx_test.py  wonderland_test.py
test/policy/: conftest.py  test_access_control.py  test_content_safety.py  test_engine.py  test_manifesto.py
test/stubs/: __init__.py  dummies.py  install.py
test/tools/: adapter_test.py  artifact_bridge_test.py  artifact_contract_test.py  astro_network_tools_test.py  basic_info_tools_test.py  calculator_test.py  conftest.py  divination_tools_test.py  ens_tools_test.py  http_client_lifecycle_test.py  image_and_weather_tools_test.py  memory_tool_test.py  message_summary_test.py  milky_file_test.py  milky_friend_test.py  milky_group_test.py  milky_message_test.py  milky_system_test.py  reminder_tool_test.py  space_weather_tools_test.py  video_tool_test.py
test/utils/: agent_queue_test.py  agents_subagents_test.py  agents_test.py  configs_test.py  database_performance_test.py  database_test.py  dreaming_pipeline_test.py  harness_profiles_test.py  llm_factory_test.py  markdown_render_utils_test.py  markdown_rich_test.py  memory_test.py  memory_types_test.py  memory_v2_test.py  memory_v3_removed_test.py  memory_v3_test.py  message_normalizer_test.py  message_test.py  message_vector_index_test.py  milky_tools_test.py  min_heap_utils_test.py  paint_service_test.py  render_test.py  reply_context_test.py  signal_llm_test.py  staged_artifacts_test.py  subagents_test.py  tool_helpers_test.py  tool_search_test.py  video_service_test.py
tools/: NRCeggs_details.py  NRCeggs_groups.py  NRCevent_calendar.py  NRCmerchant_current.py  __init__.py  adapter.py  artifact_bridge.py  arxiv.py  aurora.py  bilibili.py  calculator.py  comet.py  deepseek_balance.py  earthquake.py  ens_normal.py  ens_professional.py  ens_read_cache.py  heavens_above.py  iching.py  mcp_client.py  memory.py  message_summary.py  milky_file.py  milky_friend.py  milky_group.py  milky_message.py  milky_system.py  paint.py  radar.py  reminder.py  rocket.py  satellite.py  scheduled_task.py  space_weather.py  tarot.py  tavily.py  typhoon.py  video.py  weather.py  webpage_recording.py  (+2 more)
utils/: agent.py  agent_context.py  agent_queue.py  agents.py  alconna.py  browser_capture.py  config.py  configs.py  context_check.py  database.py  dreaming_pipeline.py  ens_gate.py  harness_profiles.py  http_client.py  llm_factory.py  markdown_render.py  markdown_rich.py  memory.py  memory_types.py  memory_v3.py  message.py  message_normalizer.py  message_vector_index.py  milky_tools.py  min_heap.py  onnx.py  paint_service.py  progress_messages.py  render.py  reply_context.py  reverse_geocode.py  signal_llm.py  slm.py  staged_artifacts.py  subagents.py  tool_helpers.py  tool_search.py  user_profile.py  video_service.py
utils/agents/: __init__.py  assistant.py  capture.py  cognitive.py  inputs.py  progress.py  prompts.py  runtime.py  workspace.py
(+159 files in other folders)
