[project]
name = "frontier"
version = "0.1.2"
description = "A bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # 核心框架
  "nonebot2",
  "nonebot2[fastapi]",
  "nonebot-adapter-onebot",
  "nonebot-plugin-alconna",
  "nonebot-plugin-apscheduler",
  "nb-cli",
  # AI和机器学习
  "langchain",
  "langchain-community",
  "langchain-openai",
  "langchain-mcp-adapters",
  "langchain-huggingface",
  "langchain-tavily",
  "langgraph",
  "deepagents",
  "sentence-transformers",
  "accelerate",
  # 网络和数据处理
  "beautifulsoup4",
  "playwright",
  "websockets",
  "httpx[http2]",
  # 工具和实用库
  "gitpython",
  "pypinyin",
  "sqlmodel",
  "mdit-py-plugins",
  "pillow",
]
[tool.nonebot]
plugin_dirs = ["plugins"]
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]

[tool.uv.workspace]
members = []

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
extend-include = ["*.ipynb"]
line-length = 119
indent-width = 4
target-version = "py313"

[dependency-groups]
dev = ["pytest", "ruff", "ty"]
lint = ["ruff"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "B", "C", "I", "S", "UP"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
