[project]
name = "frontier"
version = "0.1.3"
description = "A bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "nonebot2[fastapi]",
  "fastapi",
  "nonebot-plugin-alconna",
  "nonebot-plugin-apscheduler",
  "apscheduler",
  "nb-cli",
  "langchain",
  "langchain-core",
  "langchain-openai",
  "openai>=2.44.0",
  "langchain-mcp-adapters",
  "langgraph",
  "deepagents",
  "beautifulsoup4",
  "playwright",
  "httpx2[http2]",
  "imageio-ffmpeg",
  "gitpython",
  "sqlmodel",
  "sqlalchemy",
  "markdown-it-py",
  "pillow",
  "pydantic",
  "jinja2",
  "tomlkit",
  "websockets>=15.0.1,<16",
  "python-dotenv",
  "bcrypt",
  "pyjwt",
  "jsonschema",
  "nonebot-adapter-milky",
  "langchain-google-genai",
  "langchain-anthropic",
  "langchain-deepseek",
  "langchain-quickjs",
]

[project.optional-dependencies]
content-check = [
  "accelerate",
  "torch",
  "torchao",
  "transformers",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin'" },
  { index = "tencent", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.nonebot]
plugin_dirs = ["plugins"]
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-milky = [{name = "nonebot-adapter-milky", module_name = "nonebot.adapters.milky"}]

[tool.uv.workspace]
members = []

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
extend-include = ["*.ipynb"]
line-length = 119
indent-width = 4

[dependency-groups]
dev = [
    "nonebug>=0.4.3",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "ruff",
    "ty",
]
lint = ["ruff"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "B", "C", "I", "S", "UP"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
